--- a/FoldingLayoutLibrary/build.gradle
+++ b/FoldingLayoutLibrary/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "ru.gdo.android.example"
         minSdkVersion 11
         targetSdkVersion 22
         versionCode 1
@@ -17,16 +16,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    android {
-        lintOptions {
-            abortOnError false
-        }
-    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    //    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile project(':HorizontalScrollViewExample')
-    compile project(':FoldingVerticalLayoutExample')
 }
