--- a/FoldingVerticalLayoutExample/src/main/AndroidManifest.xml
+++ b/FoldingVerticalLayoutExample/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.gdo.android.example.horizontalscrollview" >
+    package="ru.gdo.android.example.foldingverticallayout">
 
     <application android:allowBackup="true" android:label="@string/app_name" >
-        <activity android:name=".HorizontalScrollViewActivity"  />
+        <activity android:name=".FoldingVerticaLayoutActivity"  />
     </application>
 
 </manifest>
