--- a/FoldingVerticalLayoutExample/src/main/AndroidManifest.xml
+++ b/FoldingVerticalLayoutExample/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
     package="ru.gdo.android.example.foldingverticallayout">
 
     <application android:allowBackup="true" android:label="@string/app_name" >
-        <activity android:name=".FoldingVerticaLayoutActivity"  />
+        <activity android:name=".FoldingVerticalLayoutActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
