--- a/HorizontalScrollViewExample/src/main/AndroidManifest.xml
+++ b/HorizontalScrollViewExample/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="ru.gdo.android.example.horizontalscrollview" >
 
     <application android:allowBackup="true" android:label="@string/app_name" >
-        <activity android:name=".HorizontalScrollViewActivity"  />
+        <activity android:name=".HorizontalScrollViewActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
