--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':HorizontalScrollViewLibrary', ':HorizontalScrollViewExample', ':FoldingLayoutLibrary', ':FoldingVerticalLayoutExample'
+include ':app', ':HorizontalScrollViewLibrary', ':HorizontalScrollViewExample', ':FoldingLayoutLibrary', ':FoldingVerticalLayoutExample', ':FoldingHorizontalLayoutExample'
