Added vertical sliding layout library

--- a/VerticalSlidingExample/build.gradle
+++ b/VerticalSlidingExample/build.gradle
@@ -16,8 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    android {
+        lintOptions {
+            abortOnError false
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':SlidingLayoutLibrary')
 }
