--- a/VerticalSlidingExample/src/main/AndroidManifest.xml
+++ b/VerticalSlidingExample/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.gdo.android.example.horizontalsliding">
+    package="ru.gdo.android.example.verticalsliding" >
 
     <application android:allowBackup="true" android:label="@string/app_name">
-        <activity android:name=".HorizontalSlidingLayoutActivity"
-            android:screenOrientation="landscape" />
+        <activity android:name=".VerticalSlidingLayoutActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
