--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 21
     buildToolsVersion "22.0.1"
-
     defaultConfig {
         applicationId "ru.gdo.android.example"
-        minSdkVersion 11
-        targetSdkVersion 22
+        minSdkVersion 14
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -22,13 +21,16 @@ android {
             abortOnError false
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:22.2.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    //    compile 'com.android.support:appcompat-v7:22.2.0'
     compile project(':HorizontalScrollViewExample')
     compile project(':FoldingVerticalLayoutExample')
     compile project(':FoldingHorizontalLayoutExample')
     compile project(':HorizontalSlidingExample')
+    compile project(':VerticalSlidingExample')
 }
