--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile project(':FoldingHorizontalLayoutExample')
     compile project(':HorizontalSlidingExample')
     compile project(':VerticalSlidingExample')
+    compile project(':InfiniteViewPagerExample')
 }
