--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':HorizontalScrollViewLibrary', ':HorizontalScrollViewExample', ':FoldingLayoutLibrary', ':FoldingVerticalLayoutExample', ':FoldingHorizontalLayoutExample', ':SlidingLayoutLibrary', ':HorizontalSlidingExample', ':VerticalSlidingExample'
+include ':app', ':HorizontalScrollViewLibrary', ':HorizontalScrollViewExample', ':FoldingLayoutLibrary', ':FoldingVerticalLayoutExample', ':FoldingHorizontalLayoutExample', ':SlidingLayoutLibrary', ':HorizontalSlidingExample', ':VerticalSlidingExample', ':InfiniteViewPagerLibrary', ':InfiniteViewPagerExample'
