Added PageCurl example

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile project(':HorizontalSlidingExample')
     compile project(':VerticalSlidingExample')
     compile project(':InfiniteViewPagerExample')
+    compile project(':PageCurlExample')
 }
