--- a/PageCurlExample/src/main/AndroidManifest.xml
+++ b/PageCurlExample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.gdo.andriod.example.pagecurl" >
+    package="ru.gdo.android.example.pagecurl" >
 
     <application android:allowBackup="true" android:label="@string/app_name">
         <activity android:name=".PageCurlActivity"
