Added WebView example

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile project(':PageCurlExample')
     compile project(':GCMExample')
     compile project(':NotificationsExample')
+    compile project(':WebViewExample')
 }
