--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion rootProject.compileSdkVersion
+    buildToolsVersion rootProject.buildToolsVersion
+
     defaultConfig {
         applicationId "ru.gdo.android.example"
-        minSdkVersion 14
-        targetSdkVersion 22
+        minSdkVersion rootProject.minSdkVersion
+        targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
         versionName "1.0"
+    }
+    lintOptions {
+        abortOnError false
+    }
+    productFlavors {
     }
     buildTypes {
         release {
@@ -16,17 +22,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    android {
-        lintOptions {
-            abortOnError false
-        }
-    }
-    productFlavors {
-    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':Libraries')
     compile project(':HorizontalScrollViewExample')
     compile project(':FoldingVerticalLayoutExample')
     compile project(':FoldingHorizontalLayoutExample')
@@ -37,4 +37,5 @@ dependencies {
     compile project(':GCMExample')
     compile project(':NotificationsExample')
     compile project(':WebViewExample')
+    compile project(':MaterialDesignExample')
 }
