--- a/Libraries/build.gradle
+++ b/Libraries/build.gradle
@@ -27,5 +27,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:7.8.0'
     compile 'com.google.android.gms:play-services-base:7.8.0'
     compile 'org.apache.commons:commons-io:1.3.2'
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile ('com.android.support:appcompat-v7:23.0.1')
+//            {
+//        exclude module: 'support-v4'
+//    }
 }
