--- a/WebViewExample/src/main/AndroidManifest.xml
+++ b/WebViewExample/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="ru.gdo.android.example.webview" >
 
     <application android:allowBackup="true" android:label="@string/app_name">
-        <activity android:name="ru.gdo.android.example.webview.WebViewActivity"
+        <activity android:name=".WebViewActivity"
+            android:theme="@style/AppTheme.Toolbar"
             android:screenOrientation="portrait" />
     </application>
 
