--- a/Libraries/build.gradle
+++ b/Libraries/build.gradle
@@ -24,11 +24,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services-gcm:7.8.0'
-    compile 'com.google.android.gms:play-services-base:7.8.0'
-    compile 'org.apache.commons:commons-io:1.3.2'
-    compile ('com.android.support:appcompat-v7:23.0.1')
-//            {
-//        exclude module: 'support-v4'
-//    }
+    compile rootProject.apacheСommons
+    compile rootProject.playServicesGcm
+    compile rootProject.playServicesBase
+    compile rootProject.appCompat
+    compile rootProject.recyclerView
+    compile rootProject.supportAnnotation
 }
