--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,23 @@
 buildscript {
 
-    project.extensions.add("buildToolsVersion", "23.0.1")
-    project.extensions.add("compileSdkVersion", 23)
+    String appVersion = "23"
+    String googleVersion = "7.8.0"
+    String apacheVersion = "1.3.2"
+
+    String supportLibrary = "${appVersion}.0.1"
+
+    project.extensions.add("buildToolsVersion", supportLibrary)
+    project.extensions.add("compileSdkVersion", Integer.parseInt(appVersion))
     project.extensions.add("minSdkVersion", 14)
-    project.extensions.add("targetSdkVersion", 23)
+    project.extensions.add("targetSdkVersion", Integer.parseInt(appVersion))
+    project.extensions.add("appCompat", "com.android.support:appcompat-v7:${supportLibrary}")
+    project.extensions.add("recyclerView", "com.android.support:recyclerview-v7:${supportLibrary}")
+    project.extensions.add("design", "com.android.support:design:${supportLibrary}")
+    project.extensions.add("cardView", "com.android.support:cardview-v7::${supportLibrary}")
+    project.extensions.add("supportAnnotation", "com.android.support:support-annotations:${supportLibrary}")
+    project.extensions.add("playServicesGcm", "com.google.android.gms:play-services-gcm:${googleVersion}")
+    project.extensions.add("playServicesBase", "com.google.android.gms:play-services-base:${googleVersion}")
+    project.extensions.add("apacheСommons", "org.apache.commons:commons-io:${apacheVersion}")
 
     repositories {
         jcenter()
@@ -12,32 +26,12 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
     }
+
 }
 
 allprojects {
     repositories {
         jcenter()
     }
-
-
-//    dependencies {
-//        //......
-//        compile supportDependencies.appCompat
-//        compile supportDependencies.design
-//    }
-//
-    //    ext {
-    //Version
-//        supportLibrary = '23.0.1'
-
-    //Support Libraries dependencies
-//        supportDependencies = [
-//                appCompat        :    "com.android.support:appcompat-v7:${supportLibrary}",
-//                recyclerView     :    "com.android.support:recyclerview-v7:21.0.0",
-//                design           :    "com.android.support:design:${supportLibrary}",
-//                cardView         :    "com.android.support:cardview-v7:${supportLibrary}",
-//                supportAnnotation:    "com.android.support:support-annotations:${supportLibrary}",
-//        ]
-//    }
 
 }
