--- a/FoldingVerticalLayoutExample/build.gradle
+++ b/FoldingVerticalLayoutExample/build.gradle
@@ -11,7 +11,7 @@ android {
         versionName "1.0"
     }
     lintOptions {
-        abortOnError false
+        abortOnError true
     }
     buildTypes {
         release {
