--- a/Libraries/build.gradle
+++ b/Libraries/build.gradle
@@ -12,7 +12,7 @@ android {
         versionName "1.0"
     }
     lintOptions {
-        abortOnError false
+        abortOnError true
     }
     buildTypes {
         release {
