--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,21 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.20.0'
+    }
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    mavenCentral()
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -12,7 +29,7 @@ android {
         versionName "1.0"
     }
     lintOptions {
-        abortOnError false
+        abortOnError true
     }
     productFlavors {
     }
@@ -39,4 +56,7 @@ dependencies {
     compile project(':WebViewExample')
     compile project(':MaterialDesignExample')
     compile project(':CrashApplicationExample')
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
+        transitive = true;
+    }
 }
